# Extended-TS-SDK

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  NPM_RELEASE_CHECKLIST.md  README.md  RELEASE_COMMANDS.md  package-lock.json  package.json  tsconfig.examples.json
examples/: 01_basic_order_env.ts  02_market_order_env.ts  03_stream.ts  09_close_all_positions.ts  10_ws_orderbook.ts  13_modify_order.ts  14_update_leverage.ts  15_ws_trades.ts  README.md
src/: config.ts  errors.ts  index.ts
src/perpetual/: amounts.ts  assets.ts  bridges.ts  candles.ts  clients.ts  configuration.ts  fees.ts  funding-rates.ts  orderbooks.ts  orders.ts  positions.ts  trades.ts  transfers.ts  withdrawals.ts
src/perpetual/crypto/: signer.ts
src/perpetual/stream-client/: account-subscription.ts  orderbook-subscription.ts  perpetual-stream-connection.ts  stream-client.ts
src/perpetual/trading-client/: base-module.ts  info-module.ts  order-management-module.ts  trading-client.ts
src/perpetual/user-client/: onboarding.ts
src/utils/: formatters.ts  http.ts  marketConfig.ts  nonce.ts  string.ts
tests/: onboarding.test.js  test-wrapper-signing.js
tests/__mocks__/: stark-crypto-wrapper-wasm.js
wasm/: stark_crypto_wasm_bg.wasm
wasm-signer/: Cargo.toml  build.sh
wasm-signer/.cargo/: config.toml
